<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:orientation="vertical"
    tools:context=".Page01">

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/sandali" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/filmname"
        android:gravity="center"
        android:padding="14dp"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center">

        <EditText
            android:id="@+id/Edtradif"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:background="@drawable/filmname"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/radif"
            android:inputType="textPersonName"
            android:padding="14dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/Edtsandali"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:background="@drawable/filmname"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/sandali"
            android:inputType="textPersonName"
            android:padding="14dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/filmname"
        android:padding="10dp"
        android:text="@string/role"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnsabt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/sabt"
        android:padding="15dp"
        android:text="@string/saabt_va_kharid"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="78dp"
        android:background="#7CB242">

        <ImageView
            android:id="@+id/home"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/cinemaic" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:background="@drawable/btn01"
            android:text="@string/back"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn01"
            android:text="@string/front"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>
</LinearLayout>