<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image"
    android:orientation="vertical"
    tools:context=".Final_signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/lalezar"
            android:text="@string/signupsucc2"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/lalezar"
            android:text="@string/signupsucc3"
            android:textColor="#000000"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnvorod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/back_finalsignup"
            android:fontFamily="@font/lalezar"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/vorod"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="209dp"
            android:layout_height="234dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            app:srcCompat="@drawable/cinemaic" />
    </LinearLayout>
</LinearLayout>