<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7CB342"
    android:orientation="vertical"
    tools:context=".SplashScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="340dp"
                android:layout_height="279dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                app:srcCompat="@drawable/cinemaic"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/lalezar"
                android:gravity="center"
                android:text="@string/appname"
                android:textColor="#03204A"
                android:textSize="38sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/lalezar"
                android:gravity="center"
                android:text="@string/text1"
                android:textColor="@color/appicon_background"
                android:textSize="30sp"
                android:textStyle="bold" />
           <com.airbnb.lottie.LottieAnimationView
               android:layout_width="137dp"
               android:layout_height="111dp"
              android:layout_gravity="center"
               android:layout_marginTop="35dp"
               app:lottie_autoPlay="true"
               app:lottie_fileName="floading.json"
               app:lottie_loop="true"
               />
            <TextView
                android:id="@+id/textView12"
                android:layout_marginTop="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:text="@string/version" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
