<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#403D3D"
    android:orientation="vertical"
    tools:context=".Page01">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#7CB342">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/baraz"
            android:gravity="center"
            android:text="@string/cinema"
            android:textColor="@color/white"
            android:textSize="50sp" />

        <ImageView
            android:id="@+id/menu"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            app:srcCompat="@drawable/menu" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/HOTEL"
                android:layout_width="174dp"
                android:layout_height="246dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginTop="100dp"
                app:srcCompat="@drawable/hotel" />

            <ImageView
                android:id="@+id/vorood"
                android:layout_width="174dp"
                android:layout_height="246dp"
                android:layout_margin="10dp"
                android:layout_marginTop="100dp"
                app:srcCompat="@drawable/vorrod" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fosil"
                android:layout_width="174dp"
                android:layout_height="246dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/fossil" />

            <ImageView
                android:id="@+id/tighi"
                android:layout_width="174dp"
                android:layout_height="246dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/tighi" />
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="68dp"
        android:background="#7CB242">

        <ImageView
            android:id="@+id/home"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/cinemaic" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:background="@drawable/btn01"
            android:text="@string/back"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn01"
            android:text="@string/front"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>
</LinearLayout>